# exam-shtocker

./: .gitignore  README.md  pyproject.toml
exam_shtocker/: __main__.py  auth.py  filecollection.py  known_bads.py  loader.py  processor.py  scraper.py  selenium_controller.py  update_checker.py
