[tool.poetry]
name = "exam-shtocker"
version = "1.0.0"
description = ""
authors = ["kilo <kilo@tardisproject.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
tqdm = "^4.66.6"
beautifulsoup4 = "^4.12.3"
rich = "^13.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
