[tool.poetry]
name = "exam-shtocker"
version = "3.0.0"
description = ""
authors = ["kilo <kilo@tardisproject.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
tqdm = "^4.66.6"
rich = "^13.9.3"
pypdf = "^5.1.0"
colorama = "^0.4.6"
selenium = "^4.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
